--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dicee</title>
-    <link rel="stylesheet" href="index1.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="container">
@@ -21,6 +21,6 @@
     <a class="btn" href='#'>Click to Roll</a>
 </div>
 <footer>Made By Shashwat</footer>
-<script src="one.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
